@@ -3,6 +3,7 @@
  */
 package net.minecraft.util.math;
 
+import java.util.Locale;
 import java.util.UUID;
 import java.util.function.IntPredicate;
 import java.util.stream.IntStream;
@@ -948,10 +949,10 @@ public class MathHelper {
 
     public static IntStream stream(int seed, int lowerBound, int upperBound, int steps) {
         if (lowerBound > upperBound) {
-            throw new IllegalArgumentException("upperbound %d expected to be > lowerBound %d".formatted(upperBound, lowerBound));
+            throw new IllegalArgumentException(String.format(Locale.ROOT, "upperbound %d expected to be > lowerBound %d", upperBound, lowerBound));
         }
         if (steps < 1) {
-            throw new IllegalArgumentException("steps expected to be >= 1, was %d".formatted(steps));
+            throw new IllegalArgumentException(String.format(Locale.ROOT, "steps expected to be >= 1, was %d", steps));
         }
         if (seed < lowerBound || seed > upperBound) {
             return IntStream.empty();
